--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
     <title>Limovia | Officiella Hemsida</title>
     <link rel="shortcut icon" href="LOGOS/LimoviaFavicon.png" type="image/x-icon">
 
+    <link rel="stylesheet" href="CSS/mediaQueries.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/footer.css">
-    <link rel="stylesheet" href="CSS/mediaQueries.css">
+
+    <link rel="stylesheet" href="CSS/aboutLimovia.css">
+    <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="stylesheet" href="CSS/fleet.css">
+    <link rel="stylesheet" href="CSS/heroImage.css">
+    <link rel="stylesheet" href="CSS/ourServices.css">
+    <link rel="stylesheet" href="CSS/subscription.css">
+    <link rel="stylesheet" href="CSS/ourServices.css">
+
+
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!--<script defer src="JS/menu.js"></script>-->
+
 </head>
 
 <body>
@@ -27,7 +38,7 @@
 
             <div class="logo">
                 <ul>
-                    <li><a href="#top">
+                    <li><a href="#">
                             <h1>Limovia</h1>
                         </a></li>
                 </ul>
@@ -36,9 +47,9 @@
             <nav class="navigationLinks" id="navigationLinks">
                 <ul>
                     <li><a href="#">Om Limovia</a></li>
+                    <li><a href="#">Våra Tjänster</a></li>
                     <li><a href="#">Abonnemang</a></li>
-                    <li><a href="#">Så fungerar det</a></li>
-                    <li><a href="#">Hitta oss</a></li>
+                    <li><a href="#">Flotta</a></li>
                     <li><a href="#">Kontakt</a></li>
                 </ul>
             </nav>
@@ -83,308 +94,10 @@
             </div>
         </section>
 
-        <section class="section2 aboutLimovia">
-            <div class="aboutCard1">
-
-                <div class="aboutCard1Titel">
-                    <h2>Lorem ipsum dolor sit. 1</h2>
-                </div>
-
-                <hr class="aboutLimoviaHR">
-
-                <div class="aboutCard1Titel">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nulla praesentium provident
-                        voluptas possimus, sapiente blanditiis iure ducimus odio ipsam enim natus, perspiciatis, sequi
-                        itaque vel incidunt necessitatibus. Laborum inventore aliquam doloremque! Eum nam cupiditate
-                        dolor
-                        architecto ad ex voluptatibus doloribus facilis atque veniam reprehenderit aperiam, ipsam
-                        aliquid
-                        officiis similique libero suscipit nemo! Repudiandae quasi totam maxime, corrupti cum nulla,
-                        nemo
-                        porro laborum dolor quisquam deserunt quis dolorem possimus magni, accusantium incidunt! Sit
-                        commodi, expedita magni tenetur eaque autem assumenda nisi numquam blanditiis doloribus?</p>
-                </div>
-
-            </div>
-            <div class="aboutCard2">
-                <!--<h1 class="aboutLimovaiaLogo">Limovia</h1>-->
-                <img class="showImgOnFullScreen" src="IMAGES/VolvoXC90Alley.jpg" alt="Volvo XC90 Alley">
-                <img class="showImgOn769px" src="IMAGES/VolvoXC90Alley769px.jpg" alt="Volvo XC90 Alley 769px">
-            </div>
-
-            <div class="aboutCard3">
-                <img class="showImgOnFullScreen" src="IMAGES/VolvoXC90Highway.jpg" alt="Volvo XC90 Highway">
-                <img class="showImgOn769px" src="IMAGES/VolvoXC90Highway769px.jpg" alt="Volvo XC90 Highway 769px">
-            </div>
-
-            <div class="aboutCard4">
-                <h2>Lorem ipsum dolor sit. 2</h2>
-
-                <hr class="aboutLimoviaHR">
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni harum praesentium laboriosam modi
-                    reprehenderit voluptatibus porro expedita placeat architecto vel tempora, corrupti exercitationem
-                    reiciendis sunt cumque odio vitae, blanditiis eos? Dicta id quod rerum ea illo provident itaque ut
-                    harum optio eligendi aliquid repellat fugiat nostrum sed, aliquam quia, natus eum quibusdam dolorem
-                    minus dolores doloribus! Quibusdam aliquam praesentium rerum sapiente eaque sunt, iste voluptates
-                    odit eius incidunt consectetur.</p>
-            </div>
-
-            <div class="aboutCardImage541px">
-                <img class="showImgOnFullScreen" src="IMAGES/VolvoXC90Highway.jpg" alt="Volvo XC90 Highway">
-                <img class="showImgOn769px" src="IMAGES/VolvoXC90Highway769px.jpg" alt="Volvo XC90 Highway 769px">
-            </div>
-
-        </section>
-
-        <section class="section3 subscription">
-            <div class="subscriptionText">
-                <h2>Abonnemang</h2>
-
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus illo explicabo tempore
-                    minima
-                    eveniet modi tempora beatae. Beatae non atque ipsam voluptates qui neque voluptatibus quod
-                    fugiat
-                    aliquam veniam? Amet nobis, enim omnis qui aliquam consectetur commodi possimus quasi nulla quam
-                    necessitatibus. Quis nemo consectetur ex repellat error quae delectus consequatur explicabo eos
-                    quas
-                    nesciunt corrupti quia asperiores quibusdam nihil magni illum, tempore libero beatae nobis
-                    tempora
-                    quisquam inventore! Commodi eius et numquam beatae quia magni delectus non exercitationem
-                    laboriosam
-                    quis officia voluptate, placeat dolor iste?</p>
-            </div>
-
-            <div class="subscriptionTable">
-                <div class="tableTitle">
-                    <h2>Våra abonnemang</h2>
-                </div>
-
-                <div class="subscriptionTableContent">
-                    <table>
-                        <tr class="tableHead">
-                            <th colspan="2">
-                                <h2>Grund</h2>
-                                <p><span class="charge">755 kr / mån</span></p>
-                            </th>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Komfortabel Bil</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Max 3 passagerare</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Wi-Fi ombord</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols travelForFee">
-                            <td>Att åka för</td>
-                            <td>605 kr</td>
-                        </tr>
-
-                        <tr class="cols travelForFee">
-                            <td>Avgift</td>
-                            <td>150 kr</td>
-                        </tr>
-
-                        <tr>
-                            <td colspan="2" class="greenButton">Bli kund</td>
-                        </tr>
-                    </table>
-
-                    <table>
-                        <tbody>
-
-                            <tr class="tableHead">
-                                <th colspan="2">
-                                    <h2>Plus</h2>
-                                    <p><span class="charge">1 250 kr / mån</span></p>
-                                </th>
-                            </tr>
-
-                            <tr class="cols extraTableInfo">
-                                <td>Högklassig bil</td>
-                                <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                            </tr>
-
-                            <tr class="cols extraTableInfo">
-                                <td>Dygnet runt</td>
-                                <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                            </tr>
-
-                            <tr class="cols extraTableInfo">
-                                <td>Max 7 passagerare</td>
-                                <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                            </tr>
-
-                            <tr class="cols extraTableInfo">
-                                <td>Wi-Fi ombord</td>
-                                <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                            </tr>
-
-                            <tr class="cols extraTableInfo">
-                                <td>20m kostnadsfri vänta</td>
-                                <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                            </tr>
-
-                            <tr class="cols travelForFee">
-                                <td>Att åka för</td>
-                                <td>1 100 kr</td>
-                            </tr>
-
-                            <tr class="cols travelForFee">
-                                <td>Avgift</td>
-                                <td>150 kr</td>
-                            </tr>
-
-                            <tr>
-                                <td colspan="2" class="greenButton">Bli kund</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <table>
-                        <tr class="tableHead">
-                            <th colspan="2">
-                                <h2>Premium</h2>
-                                <p><span class="charge">3 750 kr / mån</span></p>
-                            </th>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Premium Bil</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Dygnet runt</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Inbyggd TV</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Wi-Fi ombord</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>Max 8 passagerare</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols extraTableInfo">
-                            <td>1h kostnadsfri vänta</td>
-                            <td class="checkIcon"><i class="material-icons">&#xe5ca;</i></td>
-                        </tr>
-
-                        <tr class="cols travelForFee">
-                            <td>Att åka för</td>
-                            <td>3 600 kr</td>
-                        </tr>
-
-                        <tr class="cols travelForFee">
-                            <td>Avgift</td>
-                            <td>150 kr</td>
-                        </tr>
-
-                        <tr>
-                            <td colspan="2" class="greenButton">Bli kund</td>
-                        </tr>
-                    </table>
-                </div>
-
-
-            </div>
-
-        </section>
-
-        <section class="section4 howItWorks"></section>
-        <section class="section5 findUs"></section>
-        <section class="section5 contact">
-
-            <div class="contactContent">
-                <div class="contactTitle">
-                    <h2>Kontakt</h2>
-                </div>
-
-                <div class="contactProfiles">
-
-                    <div class="profileImageAndText">
-                        <figure class="profileFigure">
-                            <img src="IMAGES/ProfileIcon.jpg" alt="IMAGES/ProfileIcon.jpg">
-                            <figcaption>William Tshibwabwa</figcaption>
-                            <figcaption>Chief Executive Officer</figcaption>
-                            <figcaption>william.tshibwabwa@limovia.se</figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="profileImageAndText">
-                        <figure class="profileFigure">
-                            <img src="IMAGES/ProfileIcon.jpg" alt="IMAGES/ProfileIcon.jpg">
-                            <figcaption>Sofia Dahl</figcaption>
-                            <figcaption>Chief Operating Officer</figcaption>
-                            <figcaption>sofia.dahl@limovia.se</figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="profileImageAndText">
-                        <figure class="profileFigure">
-                            <img src="IMAGES/ProfileIcon.jpg" alt="IMAGES/ProfileIcon.jpg">
-                            <figcaption>Mathias Bergman</figcaption>
-                            <figcaption>Chief Financial Officer</figcaption>
-                            <figcaption>mathias.bergman@limovia.se</figcaption>
-                        </figure>
-                    </div>
-
-                </div>
-
-                <div class="contactForm">
-
-                    <form>
-
-                        <div class="inputGroup">
-
-                            <div class="inputRow">
-                                <input type="text" id="fname" name="fname" placeholder="Förnamn" required>
-                                <input type="text" id="lname" name="lname" placeholder="Efternamn" required>
-                            </div>
-
-                            <div class="inputRow">
-                                <input type="email" id="mail" name="mail" placeholder="E-mail" required>
-                                <input type="tel" id="pnumber" name="pnumber" placeholder="Telefon Nr" required>
-                            </div>
-
-                            <!--<input type="text" id="message" name="message" placeholder="Meddelande" required>-->
-                            <textarea name="message" id="messade" rows="10" placeholder="Meddelande"></textarea>
-
-                            <div class="send">
-                                <input type="submit">
-                            </div>
-
-
-                        </div>
-
-                    </form>
-
-                </div>
-
-            </div>
-        </section>
-
     </main>
 
     <footer>
+
         <div class="footerContent">
 
             <div class="footerLeft">
@@ -397,14 +110,14 @@
             <div class="footerRight">
                 <ul>
                     <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Cookies Policy</a></li>
                     <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Legal Notice</a></li>
+                    <li><a href="#">Accessibility</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">About</a></li>
                 </ul>
             </div>
-
         </div>
+        
     </footer>
 </body>
 
