--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <hr class="numberShowHR">
                 <div class="numberCard">
-                    <p class="numberShowNumber">30</p>
+                    <p class="numberShowNumber">14</p>
                     <p class="numberShowText">Olika kommuner</p>
                 </div>
                 <hr class="numberShowHR">
@@ -91,6 +91,47 @@
                     <p class="numberShowText">Medlemmar</p>
                 </div>
             </div>
+        </section>
+
+        <section class="aboutLimovia">
+            <div class="emptyGrid"></div>
+
+            <div class="aboutLimoviaInfo">
+
+                <figure>
+
+                    <div class="aboutLimoviaImage768px">
+                        <img src="IMAGES/PrivateDriverOpensDoor.jpg" alt="Private Driver Opens Door"
+                            style="width: 100%;">
+                    </div>
+
+                    <div class="aboutLimoviaImage">
+                        <img src="IMAGES/PrivateDriverOpensDoor.jpg" alt="Private Driver Opens Door">
+                    </div>
+
+                    <figcaption class="aboutLimoviaText1">
+                        <h1>LIMOVIA:<br>TRANSPORTTJÄNSTER DU BEHÖVER</h1>
+                    </figcaption>
+
+                    <figcaption class="aboutLimoviaText2">
+                        <p>Tar dig dit du behöver åka</p>
+                    </figcaption>
+
+                    <figcaption class="aboutLimoviaText3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptate laboriosam
+                            repellat pariatur ratione harum quibusdam consequuntur sapiente tempore, ipsum nam tenetur
+                            debitis natus dolores necessitatibus. Accusamus, dolorum. Dignissimos quae aliquid sit
+                            possimus! Delectus, ex est modi aspernatur magni obcaecati.</p>
+                    </figcaption>
+                </figure>
+
+            </div>
+
+
+
+            </div>
+
+            <div class="emptyGrid"></div>
         </section>
 
     </main>
@@ -116,7 +157,7 @@
                 </ul>
             </div>
         </div>
-        
+
     </footer>
 </body>
 
