--- a/index.html
+++ b/index.html
@@ -127,12 +127,24 @@
 
             </div>
 
-
-
-            </div>
-
             <div class="emptyGrid"></div>
         </section>
+
+        <section class="aboutLimoviaHeroImage">
+            <div class="aboutLimoviaHeroText">
+                <h1 class="aboutLimoviaHeroTitle">Om oss</h1>
+                <p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+                    pariatur
+                    dolorem aliquam placeat
+                    facilis possimus iusto fugit, ducimus vitae consequuntur cupiditate nam incidunt assumenda voluptate
+                    maiores necessitatibus magni nobis tempore culpa! Porro, assumenda optio, velit dolores, at aliquid
+                    asperiores dolor iste soluta quisquam doloribus cupiditate! Consectetur culpa iure suscipit ad
+                    libero, unde commodi enim aspernatur eos harum a mollitia quidem! Mollitia, accusamus?</p>
+            </div>
+        </section>
+
+
+
 
     </main>
 
