--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
     <link rel="stylesheet" href="CSS/fleet.css">
     <link rel="stylesheet" href="CSS/contact.css">
 
+    <!--  Raleway  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap" rel="stylesheet">
 
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
 
     <!--<script defer src="JS/menu.js"></script>-->
 
@@ -133,19 +138,14 @@
         <section class="aboutLimoviaHeroImage">
             <div class="aboutLimoviaHeroText">
                 <h1 class="aboutLimoviaHeroTitle">Om oss</h1>
-                <p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-                    pariatur
-                    dolorem aliquam placeat
-                    facilis possimus iusto fugit, ducimus vitae consequuntur cupiditate nam incidunt assumenda voluptate
-                    maiores necessitatibus magni nobis tempore culpa! Porro, assumenda optio, velit dolores, at aliquid
-                    asperiores dolor iste soluta quisquam doloribus cupiditate! Consectetur culpa iure suscipit ad
-                    libero, unde commodi enim aspernatur eos harum a mollitia quidem! Mollitia, accusamus?</p>
+                <p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                    sapiente illo odit! Placeat consectetur accusantium neque. Animi reiciendis doloribus voluptate eos
+                    beatae dolores assumenda repellendus, eveniet sapiente earum qui, nam quos voluptas similique ab, id
+                    amet dolorum commodi consectetur culpa ullam est delectus perferendis. Minus illum voluptatem nemo
+                    doloribus ab sequi, dolorem facere perspiciatis. Alias quod quis molestiae ipsa illum quam delectus.
+                    Officiis corrupti veritatis amet nostrum sequi id sunt impedit eum neque soluta.</p>
             </div>
         </section>
-
-
-
-
     </main>
 
     <footer>
