--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <link rel="stylesheet" href="CSS/fleet.css">
     <link rel="stylesheet" href="CSS/contact.css">
 
+    <script defer src="JS/quoteSlide.js"></script>
+    <!--<script defer src="JS/menu.js"></script>-->
+
+
+
+
     <!--  Raleway  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +41,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
 
 
-    <!--<script defer src="JS/menu.js"></script>-->
 
 </head>
 
@@ -149,6 +154,36 @@
                     Officiis corrupti veritatis amet nostrum sequi id sunt impedit eum neque soluta.</p>
             </div>
         </section>
+
+        <section class="aboutLimoviaSlideshow" >
+
+            <div class="slides">
+                <span><i class="fal fa-quote-left"></i></span>
+                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium placeat cum dolorum maiores
+                    earum vel beatae odit numquam accusantium quae corrupti, amet fugit corporis dicta!</q>
+                <p class="author">L. Södergren</p>
+            </div>
+
+            <div class="slides">
+                <span><i class="fal fa-quote-left"></i></span>
+                <q>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta repudiandae temporibus fugiat
+                    facilis quasi incidunt vel. Sed laudantium explicabo accusamus reiciendis officia quam dolores
+                    quaerat.</q>
+                <p class="author">S. Cederström</p>
+            </div>
+
+            <div class="slides">
+                <span><i class="fal fa-quote-left"></i></span>
+                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, ab officiis repudiandae porro,
+                    corrupti obcaecati ratione explicabo architecto sint fuga eveniet eius quam nemo magni.</q>
+                <p class="author">H. Lundin</p>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
+        </section>
+
     </main>
 
     <footer>
