--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
 
 
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 
@@ -155,27 +158,33 @@
             </div>
         </section>
 
-        <section class="aboutLimoviaSlideshow" >
+        <section class="aboutLimoviaSlideshow">
 
             <div class="slides">
-                <span><i class="fal fa-quote-left"></i></span>
-                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium placeat cum dolorum maiores
-                    earum vel beatae odit numquam accusantium quae corrupti, amet fugit corporis dicta!</q>
+                <div class="quoteIcon">
+                    <span><img src="ICONS/quote-right-solid.svg" alt="Quote Right Solid"></i></span>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium placeat cum dolorum maiores
+                    earum vel beatae odit numquam accusantium quae corrupti, amet fugit corporis dicta!</p>
                 <p class="author">L. Södergren</p>
             </div>
 
             <div class="slides">
-                <span><i class="fal fa-quote-left"></i></span>
-                <q>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta repudiandae temporibus fugiat
+                <div class="quoteIcon">
+                    <span><img src="ICONS/quote-right-solid.svg" alt="Quote Right Solid"></i></span>
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta repudiandae temporibus fugiat
                     facilis quasi incidunt vel. Sed laudantium explicabo accusamus reiciendis officia quam dolores
-                    quaerat.</q>
-                <p class="author">S. Cederström</p>
+                    quaerat.</p>
+                <p class="author">S. Ceder ström</p>
             </div>
 
             <div class="slides">
-                <span><i class="fal fa-quote-left"></i></span>
-                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, ab officiis repudiandae porro,
-                    corrupti obcaecati ratione explicabo architecto sint fuga eveniet eius quam nemo magni.</q>
+                <div class="quoteIcon">
+                    <span><img src="ICONS/quote-right-solid.svg" alt="Quote Right Solid"></i></span>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, ab officiis repudiandae porro,
+                    corrupti obcaecati ratione explicabo architecto sint fuga eveniet eius quam nemo magni.</p>
                 <p class="author">H. Lundin</p>
             </div>
 
