--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
                 <div class="quoteIcon">
                     <span><img src="ICONS/quote-right-solid.svg" alt="Quote Right Solid"></i></span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium placeat cum dolorum maiores
-                    earum vel beatae odit numquam accusantium quae corrupti, amet fugit corporis dicta!</p>
-                <p class="author">L. Södergren</p>
+                <p>Moïse är världens bästa bror. Jag tycker att han är så fantastisk. Hur kan man vara som honom. Så
+                    underbar! Jag önskar
+                    att jag kunde vara som honom.</p>
+                <p class="author">S. Tshibwabwa</p>
             </div>
 
             <div class="slides">
@@ -176,7 +177,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta repudiandae temporibus fugiat
                     facilis quasi incidunt vel. Sed laudantium explicabo accusamus reiciendis officia quam dolores
                     quaerat.</p>
-                <p class="author">S. Ceder ström</p>
+                <p class="author">S. Cederström</p>
             </div>
 
             <div class="slides">
