--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                 <p class="author">H. Lundin</p>
             </div>
 
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
+            <a class="prev" onclick="plusSlides(-1); stopAutoPlay()">❮</a>
+            <a class="next" onclick="plusSlides(1); stopAutoPlay()">❯</a>
 
         </section>
 
