--- a/index.html
+++ b/index.html
@@ -164,10 +164,9 @@
                 <div class="quoteIcon">
                     <span><img src="ICONS/quote-right-solid.svg" alt="Quote Right Solid"></i></span>
                 </div>
-                <p>Moïse är världens bästa bror. Jag tycker att han är så fantastisk. Hur kan man vara som honom. Så
-                    underbar! Jag önskar
-                    att jag kunde vara som honom.</p>
-                <p class="author">S. Tshibwabwa</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus rem inventore dolorum nulla, sint
+                    quibusdam dicta ad nihil dignissimos, praesentium, nesciunt commodi quidem amet.</p>
+                <p class="author">F. Ljungberg</p>
             </div>
 
             <div class="slides">
