--- a/index.html
+++ b/index.html
@@ -205,10 +205,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer </a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">Boka</a></li>
+                        <li><a class="bookServicesButton" href="#">Boka</a></li>
+                        <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
 
@@ -224,10 +222,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer </a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">Boka</a></li>
+                    <li><a class="bookServicesButton" href="#">Boka</a></li>
+                    <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
             </div>
@@ -242,8 +238,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer </a></li>
-                        <li><a href="#">Boka</a></li>
+                        <li><a class="bookServicesButton" href="#">Boka</a></li>
+                        <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
             </div>
@@ -258,8 +254,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer </a></li>
-                        <li><a href="#">Boka</a></li>
+                        <li><a class="bookServicesButton" href="#">Boka</a></li>
+                        <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
             </div>
@@ -273,8 +269,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer </a></li>
-                        <li><a href="#">Boka</a></li>
+                        <li><a class="bookServicesButton" href="#">Boka</a></li>
+                        <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
             </div>
@@ -289,8 +285,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer</a></li>
-                        <li><a href="#">Boka</a></li>
+                        <li><a class="bookServicesButton" href="#">Boka</a></li>
+                        <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
             </div>
@@ -305,8 +301,8 @@
 
                 <div class="servicesButtons">
                     <ul>
-                        <li><a href="#">Läs mer </a></li>
-                        <li><a href="#">Boka</a></li>
+                        <li><a class="bookServicesButton" href="#">Boka</a></li>
+                        <li><a class="readMoreServicesButton" href="#">Läs mer</a></li>
                     </ul>
                 </div>
             </div>
