--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="CSS/subscription.css">
     <link rel="stylesheet" href="CSS/fleet.css">
     <link rel="stylesheet" href="CSS/contact.css">
+    
+    <link rel="stylesheet" href="CSS/commonQuestions.css">
+    
 
     <script defer src="JS/quoteSlide.js"></script>
     <!--<script defer src="JS/menu.js"></script>-->
@@ -316,6 +319,13 @@
                 </div>
             </div>
 
+        </section>
+
+        <section class="commonQuestionsHeroImage">
+            <div class="commonQuestionsHeroText">
+                <h1 class="commonQuestionsHeroTitle">Allt du behöver veta</h1>
+                <p class="commonQuestionsHeroParagraph">Här hittar du svaren.</p>
+            </div>
         </section>
 
     </main>
