--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
 
             <div class="footerRight">
                 <ul>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Legal Notice</a></li>
-                    <li><a href="#">Accessibility</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Allmänna villkor</a></li>
+                    <li><a href="#">Integritetspolicy</a></li>
+                    <li><a href="#">Tillgänglighet</a></li>
+                    <li><a href="#">Limovia karriär</a></li>
+                    <li><a href="#">Kontakt</a></li>
                 </ul>
             </div>
         </div>
