Search bar done

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="CSS/subscription.css">
     <link rel="stylesheet" href="CSS/fleet.css">
     <link rel="stylesheet" href="CSS/contact.css">
-    
+
     <link rel="stylesheet" href="CSS/commonQuestions.css">
-    
+
 
     <script defer src="JS/quoteSlide.js"></script>
     <!--<script defer src="JS/menu.js"></script>-->
@@ -147,6 +147,7 @@
             </div>
 
             <div class="emptyGrid"></div>
+
         </section>
 
         <section class="aboutLimoviaHeroImage">
@@ -326,6 +327,35 @@
                 <h1 class="commonQuestionsHeroTitle">Allt du behöver veta</h1>
                 <p class="commonQuestionsHeroParagraph">Här hittar du svaren.</p>
             </div>
+        </section>
+
+        <section class="questionContainer">
+
+            <div class="questionSearchBar">
+                <form class="searchBar" action="#">
+                    <input type="text" placeholder="skriv här" name="search" required autocomplete="off">
+                    <button type="submit"><i class="fa fa-search"></i></i></button>
+                </form>
+            </div>
+
+            <div class="questions">
+                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
+                    reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+            </div>
+
+            <div class="questions">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
+                    reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+            </div>
+
+            <div class="questions">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad aut rem unde nostrum porro natus
+                    reiciendis debitis ducimus molestias, repudiandae, rerum consequuntur labore ipsam quas?</p>
+            </div>
+
         </section>
 
     </main>
