Search bar done

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+
+    <!--  Roboto  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> -->
@@ -332,8 +338,8 @@
         <section class="questionContainer">
 
             <div class="questionSearchBar">
-                <form class="searchBar" action="#">
-                    <input type="text" placeholder="skriv här" name="search" required autocomplete="off">
+                <form class="searchBar" action="https://youtu.be/0-7IHOXkiV8?si=Ipa8abByRP5gL_aY&t=116">
+                    <input type="text" placeholder="sök här" name="search" required autocomplete="off">
                     <button type="submit"><i class="fa fa-search"></i></i></button>
                 </form>
             </div>
@@ -368,7 +374,7 @@
                 <span class="footerLogo"><a href="#">
                         <h3>Limovia</h3>
                     </a></span>
-                <p>&copy; 2023 Limovia Ltd</p>
+                <p>&copy; 2024 Limovia Ltd</p>
             </div>
 
             <div class="footerRight">
