--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 
     <script defer src="JS/quoteSlide.js"></script>
+    <script defer src="JS/fleetSlide.js"></script>
     <!--<script defer src="JS/menu.js"></script>-->
 
 
