--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <ul>
                     <li><a href="#">Om Limovia</a></li>
                     <li><a href="#">Våra Tjänster</a></li>
-                    <li><a href="#">Abonnemang</a></li>
+                    <li><a href="#">FAQ</a></li>
                     <li><a href="#">Flotta</a></li>
                     <li><a href="#">Kontakt</a></li>
                 </ul>
