--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                 <div class="contactRight">
 
                     <div class="contactRightText">
-                        <p>Använd formuläret nedan för att kontakta oss om du vill veta mer om TheCar. Eller ring oss på
+                        <p>Använd formuläret nedan för att kontakta oss om du vill veta mer om Limovia. Eller ring oss på
                             08 777 83 47.</p>
                     </div>
 
