--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -462,7 +462,7 @@
 
     </main>
 
-    <footer>
+    <!--<footer>
 
         <div class="footerContent">
 
@@ -484,7 +484,7 @@
             </div>
         </div>
 
-    </footer>
+    </footer>-->
 
 </body>
 
